# spotless-squad

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  junit.xml  mypy.ini  pyproject.toml  pytest-report.html  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: build.yml  codecov.yml
docs/ipynb/: populate_database.ipynb  populate_database_from_file.ipynb
spotlesssquad/: SpotlessSquad.db  common.py  models.py
spotlesssquad/app/: main.py
spotlesssquad/authentication/: renderer.py
spotlesssquad/booking/: common.py  models.py  renderer.py
spotlesssquad/calc/: common.py  renderer.py
spotlesssquad/login/: common.py  renderer.py
spotlesssquad/my_bookings/: common.py  renderer.py
spotlesssquad/sentry/: main.py
spotlesssquad/settings/: common.py  models.py  renderer.py
spotlesssquad/signup/: common.py  renderer.py
spotlesssquad/sql/: tables.py
spotlesssquad/tests/: test_calc.py  test_common.py  test_user_update.py  test_user_update_app.py
