[metadata]
name = spotlesssquad
version = 1.0.0
description = Spotless Squad

[options]
packages = find_namespace:
python_requires = >=3.9.0
include_package_data = True

[options.packages.find]
exclude =
    spotlesssquad.tests*

[options.package_data]
* =
    *.csv
    *.html
    *.sql
    *.json
    *.png
    *.cpg
    *.dbf
    *.prj
    *.shp
    *.shx
